--- a/style.css
+++ b/style.css
@@ -1,15 +1,46 @@
 table {
-    font-family: arial, sans-serif;
+    font-family: sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 50%;
+    align-items: center;
+}
+h1 {
+    font-family: sans-serif;
+    text-align: center;
 }
 
-td, th {
+h3 {
+        font-family: sans-serif;
+        text-align: center;
+        align-items: center;
+    }
+
+td, th, tr{
     border: 1px solid #dddddd;
-    text-align: left;
+    text-align: center;
     padding: 4px;
 }
 
 tr:nth-child(even) {
     background-color: #dddddd;
+}
+
+img{
+    border-radius: 60px;
+    width: 40%;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+
+}
+
+cite{
+    font-size: large;
+
+}
+
+p{
+    font-size: large;
 }
